[gd_scene load_steps=38 format=3 uid="uid://lp22f4lydf4p"]

[ext_resource type="Script" uid="uid://d11ele5x3lbm1" path="res://scripts/characters/kamisato_ayaka_character.gd" id="1_sword_char"]
[ext_resource type="Texture2D" uid="uid://p5yv5ngfrcoo" path="res://textures/characters/神里idel.png" id="2_sd6lh"]
[ext_resource type="Texture2D" uid="uid://bc3cgn2g32xk5" path="res://textures/characters/神里move.png" id="3_sd6lh"]
[ext_resource type="Texture2D" uid="uid://dx8q3hoy4l72j" path="res://textures/effects/无锋剑.png" id="4_sword"]
[ext_resource type="Texture2D" uid="uid://dcx7li7uvt85x" path="res://textures/characters/ayaka技能精灵表.png" id="5_skill"]
[ext_resource type="Texture2D" uid="uid://5wufjb0nyssl" path="res://textures/characters/ayaka重击精灵表.png" id="6_charged"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rj564"]
atlas = ExtResource("2_sd6lh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt451"]
atlas = ExtResource("2_sd6lh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2kmy"]
atlas = ExtResource("3_sd6lh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk57y"]
atlas = ExtResource("3_sd6lh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fjrip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj564")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt451")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2kmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk57y")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qt451"]
radius = 1.5046294
height = 6.249999

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sword"]
size = Vector2(36, 98)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yhug"]
atlas = ExtResource("5_skill")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v4it"]
atlas = ExtResource("5_skill")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiv0e"]
atlas = ExtResource("5_skill")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw1k4"]
atlas = ExtResource("5_skill")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rba2"]
atlas = ExtResource("5_skill")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1axs2"]
atlas = ExtResource("5_skill")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp1mf"]
atlas = ExtResource("5_skill")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_skill"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yhug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v4it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiv0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw1k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rba2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1axs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp1mf")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_skill"]
radius = 150.0

[sub_resource type="AtlasTexture" id="AtlasTexture_k4v7y"]
atlas = ExtResource("6_charged")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnopy"]
atlas = ExtResource("6_charged")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry7tq"]
atlas = ExtResource("6_charged")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gc31"]
atlas = ExtResource("6_charged")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ul41"]
atlas = ExtResource("6_charged")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aksmu"]
atlas = ExtResource("6_charged")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye7f4"]
atlas = ExtResource("6_charged")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10ish"]
atlas = ExtResource("6_charged")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kr1x"]
atlas = ExtResource("6_charged")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ys0h"]
atlas = ExtResource("6_charged")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw5u8"]
atlas = ExtResource("6_charged")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmbeb"]
atlas = ExtResource("6_charged")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdkmw"]
atlas = ExtResource("6_charged")
region = Rect2(704, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_charged"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4v7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnopy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry7tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gc31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ul41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aksmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye7f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10ish")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kr1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ys0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw5u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmbeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdkmw")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b66e7"]
size = Vector2(20, 256)

[node name="kamisato_ayaka" type="CharacterBody2D" node_paths=PackedStringArray("sword_tip", "sword_area", "charged_effect", "charged_area", "skill_area", "skill_effect", "animator")]
script = ExtResource("1_sword_char")
sword_tip = NodePath("SwordArea/SwordTip")
phase1_trail_width = 4.0
phase1_trail_start_color = Color(1, 0.87200505, 0.6465043, 0.9019608)
sword_area = NodePath("SwordArea")
charged_effect = NodePath("ChargedEffect")
charged_area = NodePath("ChargedArea")
skill_area = NodePath("SkillArea")
skill_effect = NodePath("SkillEffect")
skill_damage = 75.0
hurt_speed_boost_multiplier = 1.5
animator = NodePath("AnimatedSprite2D")
knockback_force = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fjrip")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.0000005)
scale = Vector2(8.640002, 8.640002)
shape = SubResource("CapsuleShape2D_qt451")

[node name="SwordArea" type="Area2D" parent="."]
position = Vector2(7, 12)
monitoring = false
monitorable = false

[node name="Sprite2D" type="Sprite2D" parent="SwordArea"]
position = Vector2(-19, -35)
texture = ExtResource("4_sword")
offset = Vector2(20, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(1, -47)
shape = SubResource("RectangleShape2D_sword")

[node name="SwordTip" type="Marker2D" parent="SwordArea"]
position = Vector2(1, -86)

[node name="SkillEffect" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(4.735, 4.735)
sprite_frames = SubResource("SpriteFrames_skill")
frame = 2
frame_progress = 0.29577997

[node name="SkillArea" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkillArea"]
shape = SubResource("CircleShape2D_skill")

[node name="ChargedEffect" type="AnimatedSprite2D" parent="."]
scale = Vector2(4.0060277, 3.9928887)
sprite_frames = SubResource("SpriteFrames_charged")
frame = 12
frame_progress = 1.0

[node name="ChargedArea" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargedArea"]
position = Vector2(0, 2)
scale = Vector2(12.679998, 1)
shape = SubResource("RectangleShape2D_b66e7")
